--- a/webBot.html
+++ b/webBot.html
@@ -1104,24 +1104,27 @@
                 }
             }
 
-            function appendMessage(content, className) {
+function formatText(text) {
+    let formatted = text;
+    // 將換行符號轉換為 <br>
+    formatted = formatted.replace(/\n/g, '<br>');
+    // 先將成對的 **文字** 改為 <strong>文字</strong>
+    formatted = formatted.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
+    // 移除未成對的 **
+    formatted = formatted.replace(/\*\*/g, '');
+    return formatted;
+}
+
+function appendMessage(content, className) {
     const message = document.createElement("div");
     message.classList.add("message", className);
 
-    let formattedContent = content;
-
-    // 將換行符號轉換為 <br>
-    formattedContent = formattedContent.replace(/\n/g, '<br>');
-
-    // 先嘗試將成對的 **文字** 改為 <strong>文字</strong>
-    formattedContent = formattedContent.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
-
-    // 若還有未成對的 ** 殘留（例如只有一組 ** 開頭沒有結尾），則將所有 ** 去掉
-    formattedContent = formattedContent.replace(/\*\*/g, '');
-
+    const formattedContent = formatText(content); 
+    
     const text = document.createElement("span");
     text.innerHTML = formattedContent;
     message.appendChild(text);
+
     chatWindow.appendChild(message);
 
     setTimeout(() => {
@@ -1131,7 +1134,6 @@
         });
     }, 100);
 }
-
             function getGreeting() {
                 const now = new Date();
                 const hour = now.getHours();
@@ -1417,138 +1419,145 @@
             let currentStepIndex = 0;
 
             async function analyzeInput() {
-                const imageInput = document.getElementById('uploadImage');
-                const textInput = document.getElementById('textInput');
-                const button = document.getElementById('analyzeButton');
-                const resultArea = document.getElementById('resultArea');
-                const hintArea = document.getElementById('hintArea');
-                const hintContent = document.getElementById('hintContent');
-                const showNextHintButton = document.getElementById('showNextHintButton');
-                const reflectionArea = document.getElementById('reflectionArea');
-                const reflectionContent = document.getElementById('reflectionContent');
+    const imageInput = document.getElementById('uploadImage');
+    const textInput = document.getElementById('textInput');
+    const button = document.getElementById('analyzeButton');
+    const resultArea = document.getElementById('resultArea');
+    const hintArea = document.getElementById('hintArea');
+    const hintContent = document.getElementById('hintContent');
+    const showNextHintButton = document.getElementById('showNextHintButton');
+    const reflectionArea = document.getElementById('reflectionArea');
+    const reflectionContent = document.getElementById('reflectionContent');
 
-                button.innerText = '分析中，請稍候...';
-                button.disabled = true;
-                resultArea.style.display = 'block';
-                resultArea.innerHTML = '<p class="loading">正在處理...</p>';
+    // 重新初始化顯示區塊
+    button.innerText = '分析中，請稍候...';
+    button.disabled = true;
+    resultArea.style.display = 'block';
+    resultArea.innerHTML = '<p class="loading">正在處理...</p>';
+    hintArea.style.display = 'none';
+    hintContent.innerHTML = '';
+    showNextHintButton.style.display = 'none';
+    reflectionArea.style.display = 'none';
+    reflectionContent.innerHTML = '';
+    solutionSteps = [];
+    currentStepIndex = 0;
 
-                hintArea.style.display = 'none';
-                hintContent.innerHTML = '';
-                showNextHintButton.style.display = 'none';
-                reflectionArea.style.display = 'none';
-                reflectionContent.innerHTML = '';
-                solutionSteps = [];
-                currentStepIndex = 0;
+    try {
+        let payload = {};
+        if (imageInput.files.length > 0 && document.getElementById('imageContent').classList.contains('active')) {
+            const base64Image = await convertImageToBase64(imageInput.files[0]);
+            payload = {
+                contents: [
+                    {
+                        parts: [
+                            {
+                                text: `請以繁體中文回答，不使用簡體字或英文。
+                                請扮演該領域且懂得有效學習的教師，按照以下格式進行解題並回答：
+                                1. 題意分析：
+                                2. 相關知識與理論：
+                                3. 解題流程：
+                                4. 答案：
+                                5. 學習反思：
 
-                try {
-                    let payload = {};
-                    if (imageInput.files.length > 0 && document.getElementById('imageContent').classList.contains('active')) {
-                        const base64Image = await convertImageToBase64(imageInput.files[0]);
-                        payload = {
-                            contents: [
-                                {
-                                    parts: [
-                                        {
-                                            text: `請以繁體中文回答，不使用簡體字或英文。
-                                            請扮演該領域且懂得有效學習的教師，按照以下格式進行解題並回答：
-                                            1. 題意分析：
-                                            2. 相關知識與理論：
-                                            3. 解題流程：
-                                            4. 答案：
-                                            5. 學習反思：
-
-                                            請詳細分述解題步驟並在最後給出學習反思與延伸建議。`
-                                        },
-                                        {
-                                            inline_data: {
-                                                mime_type: 'image/jpeg',
-                                                data: base64Image
-                                            }
-                                        }
-                                    ]
-                                }
-                            ]
-                        };
-                    } else if (textInput.value.trim()) {
-                        payload = {
-                            contents: [
-                                {
-                                    parts: [
-                                        {
-                                            text: `請以繁體中文回答，不使用簡體字或英文。
-                                            請扮演該領域且懂得有效學習的教師，按照以下格式進行解題並回答：
-                                            1. 題意分析：
-                                            2. 相關知識與理論：
-                                            3. 解題流程：
-                                            4. 答案：
-                                            5. 學習反思：
-
-                                            題目內容：${textInput.value.trim()}
-
-                                            請詳細分述解題步驟並在最後給出學習反思與延伸建議。`
-                                        }
-                                    ]
-                                }
-                            ]
-                        };
-                    } else {
-                        alert('請提供圖片或文字內容！');
-                        button.innerText = '分析題目';
-                        button.disabled = false;
-                        return;
-                    }
-
-                    const response = await fetch(
-                        `https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=AIzaSyA5japu-01mqUn7EXxGDy1za098_leIxdQ`,
-                        {
-                            method: 'POST',
-                            headers: {
-                                'Content-Type': 'application/json',
+                                請詳細分述解題步驟並在最後給出學習反思與延伸建議。`
                             },
-                            body: JSON.stringify(payload),
-                        }
-                    );
-
-                    const responseData = await response.json();
-                    const answer = getNestedValue(responseData, 'text') || '無法獲取解答';
-
-                    const sections = answer.split(/\d\.\s/).filter((section) => section.trim() !== '');
-                    const reflectionStep = sections.pop();
-                    const stepsWithoutReflection = sections;
-
-                    solutionSteps = stepsWithoutReflection.map(s => s.trim());
-                    resultArea.innerHTML = '';
-                    hintArea.style.display = 'block';
-
-                    if (solutionSteps.length > 0) {
-                        hintContent.innerHTML = `<p>${solutionSteps[0].replace(/\n/g, '<br>')}</p>`;
-                        currentStepIndex = 0;
+                            {
+                                inline_data: {
+                                    mime_type: 'image/jpeg',
+                                    data: base64Image
+                                }
+                            }
+                        ]
                     }
+                ]
+            };
+        } else if (textInput.value.trim()) {
+            payload = {
+                contents: [
+                    {
+                        parts: [
+                            {
+                                text: `請以繁體中文回答，不使用簡體字或英文。
+                                請扮演該領域且懂得有效學習的教師，按照以下格式進行解題並回答：
+                                1. 題意分析：
+                                2. 相關知識與理論：
+                                3. 解題流程：
+                                4. 答案：
+                                5. 學習反思：
 
-                    if (solutionSteps.length > 1) {
-                        showNextHintButton.style.display = 'inline-block';
+                                題目內容：${textInput.value.trim()}
+
+                                請詳細分述解題步驟並在最後給出學習反思與延伸建議。`
+                            }
+                        ]
                     }
+                ]
+            };
+        } else {
+            alert('請提供圖片或文字內容！');
+            button.innerText = '分析題目';
+            button.disabled = false;
+            return;
+        }
 
-                    showNextHintButton.onclick = function() {
-                        currentStepIndex++;
-                        if (currentStepIndex < solutionSteps.length) {
-                            hintContent.innerHTML += `<hr><p>${solutionSteps[currentStepIndex].replace(/\n/g, '<br>')}</p>`;
-                        }
-
-                        if (currentStepIndex === solutionSteps.length - 1) {
-                            showNextHintButton.style.display = 'none';
-                            reflectionArea.style.display = 'block';
-                            reflectionContent.innerHTML = `<p>${reflectionStep.replace(/\n/g, '<br>')}</p>`;
-                        }
-                    };
-
-                } catch (error) {
-                    resultArea.innerHTML = `<p class="loading">錯誤：${error.message}</p>`;
-                } finally {
-                    button.innerText = '分析題目';
-                    button.disabled = false;
-                }
+        const response = await fetch(
+            `https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=AIzaSyA5japu-01mqUn7EXxGDy1za098_leIxdQ`,
+            {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify(payload),
             }
+        );
+
+        const responseData = await response.json();
+        const answer = getNestedValue(responseData, 'text') || '無法獲取解答';
+
+        // 將回應依序分段
+        const sections = answer.split(/\d\.\s/).filter((section) => section.trim() !== '');
+        // 最後一段視為學習反思
+        const reflectionStep = sections.pop();
+        const stepsWithoutReflection = sections;
+
+        solutionSteps = stepsWithoutReflection.map(s => s.trim());
+        resultArea.innerHTML = '';
+        hintArea.style.display = 'block';
+
+        // 顯示第一個提示(題意分析)
+        if (solutionSteps.length > 0) {
+            // 使用 formatText 格式化文字（將**變粗體，移除未成對的**）
+            hintContent.innerHTML = `<p>${formatText(solutionSteps[0])}</p>`;
+            currentStepIndex = 0;
+        }
+
+        // 若有超過一個步驟，顯示「下一提示」按鈕
+        if (solutionSteps.length > 1) {
+            showNextHintButton.style.display = 'inline-block';
+        }
+
+        showNextHintButton.onclick = function() {
+            currentStepIndex++;
+            if (currentStepIndex < solutionSteps.length) {
+                hintContent.innerHTML += `<hr><p>${formatText(solutionSteps[currentStepIndex])}</p>`;
+            }
+
+            // 所有步驟顯示完畢後，顯示學習反思
+            if (currentStepIndex === solutionSteps.length - 1) {
+                showNextHintButton.style.display = 'none';
+                reflectionArea.style.display = 'block';
+                reflectionContent.innerHTML = `<p>${formatText(reflectionStep)}</p>`;
+            }
+        };
+
+    } catch (error) {
+        resultArea.innerHTML = `<p class="loading">錯誤：${error.message}</p>`;
+    } finally {
+        button.innerText = '分析題目';
+        button.disabled = false;
+    }
+}
+
 
             function getNestedValue(data, key) {
                 if (typeof data === 'object' && data !== null) {
