--- a/webAIBot.html
+++ b/webAIBot.html
@@ -726,6 +726,24 @@
             0%, 100% { opacity: 1; }
             50% { opacity: 0.5; }
         }
+
+        /* 計算機、蕃茄鐘 共用樣式 */
+        .physics-lecture-container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 0; 
+            background-color: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+        }
+
+        .physics-lecture-container iframe {
+            width: 100%;
+            height: 100vh;
+            border: none;
+            border-radius: 8px;
+            background-color: #fff;
+        }
     </style>
 </head>
 <body>
@@ -741,6 +759,7 @@
                 <div class="menu-item" id="open-solve-problem">教我解題</div>
                 <div class="menu-item" id="open-physics-lecture">物理講義</div>
                 <div class="menu-item" id="open-calculator">計算機</div>
+                <div class="menu-item" id="open-tomato">蕃茄鐘</div>
                 <div class="menu-item hidden" id="return-chat">返回聊天</div>
             </div>
         </div>
@@ -902,6 +921,13 @@
                 </div>
             </div>
 
+            <!-- 蕃茄鐘 -->
+            <div class="external-content" id="tomato-content" style="display: none;">
+                <div class="physics-lecture-container">
+                    <iframe src="https://gishstudent.github.io/tomato-timer/" frameborder="0"></iframe>
+                </div>
+            </div>
+
             <!-- 輸入區域 -->
             <div class="input-area">
                 <label class="upload-button" style="display: none;">
@@ -929,12 +955,14 @@
             const openSolveProblem = document.getElementById('open-solve-problem'); 
             const openPhysicsLecture = document.getElementById('open-physics-lecture'); 
             const openCalculator = document.getElementById('open-calculator');
+            const openTomato = document.getElementById('open-tomato');
             const returnChat = document.getElementById('return-chat');
             const chatWindow = document.getElementById('chat-window');
             const aiGeneratorContent = document.getElementById('ai-generator-content');
             const solveProblemContent = document.getElementById('solve-problem-content');
             const physicsLectureContent = document.getElementById('physics-lecture-content');
             const calculatorContent = document.getElementById('calculator-content');
+            const tomatoContent = document.getElementById('tomato-content');
             const uploadImage = document.getElementById('upload-image');
             const imagePreviewContainer = document.getElementById('image-preview-container');
             const sendButton = document.getElementById('send-button');
@@ -1016,6 +1044,7 @@
             solveProblemContent.style.display = 'none';
             physicsLectureContent.style.display = 'none';
             calculatorContent.style.display = 'none';
+            tomatoContent.style.display = 'none';
             returnChat.classList.add('hidden');
 
             // 中英翻譯模式
@@ -1058,12 +1087,14 @@
                 solveProblemContent.style.display = 'none';
                 physicsLectureContent.style.display = 'none';
                 calculatorContent.style.display = 'none';
+                tomatoContent.style.display = 'none';
                 toolbar.style.display = 'none';
                 returnChat.classList.remove('hidden');
                 openAIGenerator.classList.add('hidden');
                 openSolveProblem.classList.add('hidden');
                 openPhysicsLecture.classList.add('hidden');
                 openCalculator.classList.add('hidden');
+                openTomato.classList.add('hidden');
                 document.querySelector('.input-area').style.display = 'none';
                 sidebar.classList.remove('show');
                 overlay.classList.remove('show');
@@ -1075,12 +1106,14 @@
                 solveProblemContent.style.display = 'block';
                 physicsLectureContent.style.display = 'none';
                 calculatorContent.style.display = 'none';
+                tomatoContent.style.display = 'none';
                 toolbar.style.display = 'none';
                 returnChat.classList.remove('hidden');
                 openAIGenerator.classList.add('hidden');
                 openSolveProblem.classList.add('hidden');
                 openPhysicsLecture.classList.add('hidden');
                 openCalculator.classList.add('hidden');
+                openTomato.classList.add('hidden');
                 document.querySelector('.input-area').style.display = 'none';
                 sidebar.classList.remove('show');
                 overlay.classList.remove('show');
@@ -1093,11 +1126,13 @@
                 toolbar.style.display = 'none';
                 physicsLectureContent.style.display = 'block';
                 calculatorContent.style.display = 'none';
+                tomatoContent.style.display = 'none';
                 returnChat.classList.remove('hidden');
                 openAIGenerator.classList.add('hidden');
                 openSolveProblem.classList.add('hidden');
                 openPhysicsLecture.classList.add('hidden');
                 openCalculator.classList.add('hidden');
+                openTomato.classList.add('hidden');
                 document.querySelector('.input-area').style.display = 'none';
                 sidebar.classList.remove('show');
                 overlay.classList.remove('show');
@@ -1108,6 +1143,7 @@
                 aiGeneratorContent.style.display = 'none';
                 solveProblemContent.style.display = 'none';
                 physicsLectureContent.style.display = 'none';
+                tomatoContent.style.display = 'none';
                 calculatorContent.style.display = 'block';
                 toolbar.style.display = 'none';
                 returnChat.classList.remove('hidden');
@@ -1115,6 +1151,26 @@
                 openSolveProblem.classList.add('hidden');
                 openPhysicsLecture.classList.add('hidden');
                 openCalculator.classList.add('hidden');
+                openTomato.classList.add('hidden');
+                document.querySelector('.input-area').style.display = 'none';
+                sidebar.classList.remove('show');
+                overlay.classList.remove('show');
+            });
+            
+            openTomato.addEventListener('click', () => {
+                chatWindow.style.display = 'none';
+                aiGeneratorContent.style.display = 'none';
+                solveProblemContent.style.display = 'none';
+                physicsLectureContent.style.display = 'none';
+                calculatorContent.style.display = 'none';
+                tomatoContent.style.display = 'block';
+                toolbar.style.display = 'none';
+                returnChat.classList.remove('hidden');
+                openAIGenerator.classList.add('hidden');
+                openSolveProblem.classList.add('hidden');
+                openPhysicsLecture.classList.add('hidden');
+                openCalculator.classList.add('hidden');
+                openTomato.classList.add('hidden');
                 document.querySelector('.input-area').style.display = 'none';
                 sidebar.classList.remove('show');
                 overlay.classList.remove('show');
@@ -1126,12 +1182,14 @@
                 solveProblemContent.style.display = 'none';
                 physicsLectureContent.style.display = 'none';
                 calculatorContent.style.display = 'none';
+                tomatoContent.style.display = 'none';
                 toolbar.style.display = 'block';
                 returnChat.classList.add('hidden');
                 openAIGenerator.classList.remove('hidden');
                 openSolveProblem.classList.remove('hidden');
                 openPhysicsLecture.classList.remove('hidden');
                 openCalculator.classList.remove('hidden');
+                openTomato.classList.remove('hidden');
                 document.querySelector('.input-area').style.display = 'flex';
                 sidebar.classList.remove('show');
                 overlay.classList.remove('show');
